--- a/Nik591/100077-madison-danforth-taken-hostage-arrow-one-shot/rus.textile
+++ b/Nik591/100077-madison-danforth-taken-hostage-arrow-one-shot/rus.textile
@@ -1,30 +1,30 @@
-Мэдисон Дэнфорт, взятая в заложники (Стрела), ваншот
+РњСЌРґРёСЃРѕРЅ Р”СЌРЅС„РѕСЂС‚, РІР·СЏС‚Р°СЏ РІ Р·Р°Р»РѕР¶РЅРёРєРё (РЎС‚СЂРµР»Р°), РІР°РЅС€РѕС‚
 
-Автор: Nik591
+РђРІС‚РѕСЂ: Nik591
 
 *000*2024-04-14 18:55
 
-Привет, ребята, я давний обозреватель, и во время своего второго повторного просмотра Стрелы я нашёл немного вдохновения во время просмотра 4x2, где была небольшая ситуация с заложниками, и я решил написать свой первый фанфик. Надеюсь, вам понравится, и, пожалуйста, дайте мне знать, что я могу сделать лучше в будущем.
+РџСЂРёРІРµС‚, СЂРµР±СЏС‚Р°, СЏ РґР°РІРЅРёР№ РѕР±РѕР·СЂРµРІР°С‚РµР»СЊ, Рё РІРѕ РІСЂРµРјСЏ СЃРІРѕРµРіРѕ РІС‚РѕСЂРѕРіРѕ РїРѕРІС‚РѕСЂРЅРѕРіРѕ РїСЂРѕСЃРјРѕС‚СЂР° РЎС‚СЂРµР»С‹ СЏ РЅР°С€С‘Р» РЅРµРјРЅРѕРіРѕ РІРґРѕС…РЅРѕРІРµРЅРёСЏ РІРѕ РІСЂРµРјСЏ РїСЂРѕСЃРјРѕС‚СЂР° 4x2, РіРґРµ Р±С‹Р»Р° РЅРµР±РѕР»СЊС€Р°СЏ СЃРёС‚СѓР°С†РёСЏ СЃ Р·Р°Р»РѕР¶РЅРёРєР°РјРё, Рё СЏ СЂРµС€РёР» РЅР°РїРёСЃР°С‚СЊ СЃРІРѕР№ РїРµСЂРІС‹Р№ С„Р°РЅС„РёРє. РќР°РґРµСЋСЃСЊ, РІР°Рј РїРѕРЅСЂР°РІРёС‚СЃСЏ, Рё, РїРѕР¶Р°Р»СѓР№СЃС‚Р°, РґР°Р№С‚Рµ РјРЅРµ Р·РЅР°С‚СЊ, С‡С‚Рѕ СЏ РјРѕРіСѓ СЃРґРµР»Р°С‚СЊ Р»СѓС‡С€Рµ РІ Р±СѓРґСѓС‰РµРј.
 
 ###
 
-Моя мама Джессика Дэнфорт баллотируется на пост мэра Стар-Сити, я её дочь Мэдисон Дэнфорт. А это запись в журнале о событиях, которые произошли сегодня.
+РњРѕСЏ РјР°РјР° Р”Р¶РµСЃСЃРёРєР° Р”СЌРЅС„РѕСЂС‚ Р±Р°Р»Р»РѕС‚РёСЂСѓРµС‚СЃСЏ РЅР° РїРѕСЃС‚ РјСЌСЂР° РЎС‚Р°СЂ-РЎРёС‚Рё, СЏ РµС‘ РґРѕС‡СЊ РњСЌРґРёСЃРѕРЅ Р”СЌРЅС„РѕСЂС‚. Рђ СЌС‚Рѕ Р·Р°РїРёСЃСЊ РІ Р¶СѓСЂРЅР°Р»Рµ Рѕ СЃРѕР±С‹С‚РёСЏС…, РєРѕС‚РѕСЂС‹Рµ РїСЂРѕРёР·РѕС€Р»Рё СЃРµРіРѕРґРЅСЏ.
 
-Мне 20 лет, я белая девушка со светлыми волосами, и в этот день на мне была чёрная жилетка, белая майка и тёмно-бордовые (без нижнего белья) джинсы в паре с чёрными ботинками и белыми носками.
+РњРЅРµ 20 Р»РµС‚, СЏ Р±РµР»Р°СЏ РґРµРІСѓС€РєР° СЃРѕ СЃРІРµС‚Р»С‹РјРё РІРѕР»РѕСЃР°РјРё, Рё РІ СЌС‚РѕС‚ РґРµРЅСЊ РЅР° РјРЅРµ Р±С‹Р»Р° С‡С‘СЂРЅР°СЏ Р¶РёР»РµС‚РєР°, Р±РµР»Р°СЏ РјР°Р№РєР° Рё С‚С‘РјРЅРѕ-Р±РѕСЂРґРѕРІС‹Рµ (Р±РµР· РЅРёР¶РЅРµРіРѕ Р±РµР»СЊСЏ) РґР¶РёРЅСЃС‹ РІ РїР°СЂРµ СЃ С‡С‘СЂРЅС‹РјРё Р±РѕС‚РёРЅРєР°РјРё Рё Р±РµР»С‹РјРё РЅРѕСЃРєР°РјРё.
 
-После нападения на объявление моей мамы мэром я решила пойти в библиотеку, чтобы подготовиться к выпускным экзаменам в школе. По дороге туда я поняла, что мне нужно в туалет, поэтому решила сходить туда, как только приду.
+РџРѕСЃР»Рµ РЅР°РїР°РґРµРЅРёСЏ РЅР° РѕР±СЉСЏРІР»РµРЅРёРµ РјРѕРµР№ РјР°РјС‹ РјСЌСЂРѕРј СЏ СЂРµС€РёР»Р° РїРѕР№С‚Рё РІ Р±РёР±Р»РёРѕС‚РµРєСѓ, С‡С‚РѕР±С‹ РїРѕРґРіРѕС‚РѕРІРёС‚СЊСЃСЏ Рє РІС‹РїСѓСЃРєРЅС‹Рј СЌРєР·Р°РјРµРЅР°Рј РІ С€РєРѕР»Рµ. РџРѕ РґРѕСЂРѕРіРµ С‚СѓРґР° СЏ РїРѕРЅСЏР»Р°, С‡С‚Рѕ РјРЅРµ РЅСѓР¶РЅРѕ РІ С‚СѓР°Р»РµС‚, РїРѕСЌС‚РѕРјСѓ СЂРµС€РёР»Р° СЃС…РѕРґРёС‚СЊ С‚СѓРґР°, РєР°Рє С‚РѕР»СЊРєРѕ РїСЂРёРґСѓ.
 
-Со мной были несколько сотрудников службы безопасности, а потом по дороге на машину, в которой я ехал, напало это уродливое шоу, которое, как я позже узнал, называлось Лонни Мачин, и убило сотрудников службы безопасности, а меня вырубило…
+РЎРѕ РјРЅРѕР№ Р±С‹Р»Рё РЅРµСЃРєРѕР»СЊРєРѕ СЃРѕС‚СЂСѓРґРЅРёРєРѕРІ СЃР»СѓР¶Р±С‹ Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё, Р° РїРѕС‚РѕРј РїРѕ РґРѕСЂРѕРіРµ РЅР° РјР°С€РёРЅСѓ, РІ РєРѕС‚РѕСЂРѕР№ СЏ РµС…Р°Р», РЅР°РїР°Р»Рѕ СЌС‚Рѕ СѓСЂРѕРґР»РёРІРѕРµ С€РѕСѓ, РєРѕС‚РѕСЂРѕРµ, РєР°Рє СЏ РїРѕР·Р¶Рµ СѓР·РЅР°Р», РЅР°Р·С‹РІР°Р»РѕСЃСЊ Р›РѕРЅРЅРё РњР°С‡РёРЅ, Рё СѓР±РёР»Рѕ СЃРѕС‚СЂСѓРґРЅРёРєРѕРІ СЃР»СѓР¶Р±С‹ Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё, Р° РјРµРЅСЏ РІС‹СЂСѓР±РёР»РѕвЂ¦
 
-Когда я проснулся, я обнаружил, что мне дико нужно пописить, и я был связан кожаными ремнями на чём-то вроде столба в арке, похожей на гаражные ворота. Я не знал, что буду делать, я надеялся, что кто-то придёт и спасёт меня, прежде чем я обмочусь, но я не был в этом слишком уверен, и этот псих где-то занимался, Бог знает чем…
+РљРѕРіРґР° СЏ РїСЂРѕСЃРЅСѓР»СЃСЏ, СЏ РѕР±РЅР°СЂСѓР¶РёР», С‡С‚Рѕ РјРЅРµ РґРёРєРѕ РЅСѓР¶РЅРѕ РїРѕРїРёСЃРёС‚СЊ, Рё СЏ Р±С‹Р» СЃРІСЏР·Р°РЅ РєРѕР¶Р°РЅС‹РјРё СЂРµРјРЅСЏРјРё РЅР° С‡С‘Рј-С‚Рѕ РІСЂРѕРґРµ СЃС‚РѕР»Р±Р° РІ Р°СЂРєРµ, РїРѕС…РѕР¶РµР№ РЅР° РіР°СЂР°Р¶РЅС‹Рµ РІРѕСЂРѕС‚Р°. РЇ РЅРµ Р·РЅР°Р», С‡С‚Рѕ Р±СѓРґСѓ РґРµР»Р°С‚СЊ, СЏ РЅР°РґРµСЏР»СЃСЏ, С‡С‚Рѕ РєС‚Рѕ-С‚Рѕ РїСЂРёРґС‘С‚ Рё СЃРїР°СЃС‘С‚ РјРµРЅСЏ, РїСЂРµР¶РґРµ С‡РµРј СЏ РѕР±РјРѕС‡СѓСЃСЊ, РЅРѕ СЏ РЅРµ Р±С‹Р» РІ СЌС‚РѕРј СЃР»РёС€РєРѕРј СѓРІРµСЂРµРЅ, Рё СЌС‚РѕС‚ РїСЃРёС… РіРґРµ-С‚Рѕ Р·Р°РЅРёРјР°Р»СЃСЏ, Р‘РѕРі Р·РЅР°РµС‚ С‡РµРјвЂ¦
 
-И примерно через 15 минут после того, как я проснулся, он вернулся, выглядя очень сердитым, и сказал что-то о встрече, которая прошла очень плохо, затем он открыл шкаф с явными орудиями пыток, и стало ясно, что он хочет выплеснуть на меня свой гнев, достаточно сказать, что я был в ужасе, и я сказал, что он может меня отпустить, и, похоже, он был убеждён этим, пока я не расскажу. Я быстро кивнул, и он освободил мои руки от верёвок и взял меня за мизинец. клянусь, мне удалось довольно хорошо скрыть своё желание вплоть до следующей части.
+Р РїСЂРёРјРµСЂРЅРѕ С‡РµСЂРµР· 15 РјРёРЅСѓС‚ РїРѕСЃР»Рµ С‚РѕРіРѕ, РєР°Рє СЏ РїСЂРѕСЃРЅСѓР»СЃСЏ, РѕРЅ РІРµСЂРЅСѓР»СЃСЏ, РІС‹РіР»СЏРґСЏ РѕС‡РµРЅСЊ СЃРµСЂРґРёС‚С‹Рј, Рё СЃРєР°Р·Р°Р» С‡С‚Рѕ-С‚Рѕ Рѕ РІСЃС‚СЂРµС‡Рµ, РєРѕС‚РѕСЂР°СЏ РїСЂРѕС€Р»Р° РѕС‡РµРЅСЊ РїР»РѕС…Рѕ, Р·Р°С‚РµРј РѕРЅ РѕС‚РєСЂС‹Р» С€РєР°С„ СЃ СЏРІРЅС‹РјРё РѕСЂСѓРґРёСЏРјРё РїС‹С‚РѕРє, Рё СЃС‚Р°Р»Рѕ СЏСЃРЅРѕ, С‡С‚Рѕ РѕРЅ С…РѕС‡РµС‚ РІС‹РїР»РµСЃРЅСѓС‚СЊ РЅР° РјРµРЅСЏ СЃРІРѕР№ РіРЅРµРІ, РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ СЃРєР°Р·Р°С‚СЊ, С‡С‚Рѕ СЏ Р±С‹Р» РІ СѓР¶Р°СЃРµ, Рё СЏ СЃРєР°Р·Р°Р», С‡С‚Рѕ РѕРЅ РјРѕР¶РµС‚ РјРµРЅСЏ РѕС‚РїСѓСЃС‚РёС‚СЊ, Рё, РїРѕС…РѕР¶Рµ, РѕРЅ Р±С‹Р» СѓР±РµР¶РґС‘РЅ СЌС‚РёРј, РїРѕРєР° СЏ РЅРµ СЂР°СЃСЃРєР°Р¶Сѓ. РЇ Р±С‹СЃС‚СЂРѕ РєРёРІРЅСѓР», Рё РѕРЅ РѕСЃРІРѕР±РѕРґРёР» РјРѕРё СЂСѓРєРё РѕС‚ РІРµСЂС‘РІРѕРє Рё РІР·СЏР» РјРµРЅСЏ Р·Р° РјРёР·РёРЅРµС†. РєР»СЏРЅСѓСЃСЊ, РјРЅРµ СѓРґР°Р»РѕСЃСЊ РґРѕРІРѕР»СЊРЅРѕ С…РѕСЂРѕС€Рѕ СЃРєСЂС‹С‚СЊ СЃРІРѕС‘ Р¶РµР»Р°РЅРёРµ РІРїР»РѕС‚СЊ РґРѕ СЃР»РµРґСѓСЋС‰РµР№ С‡Р°СЃС‚Рё.
 
-Он сказал, что передумал, а затем сломал мне руку, это было невероятно мучительно, и когда это произошло, моя плотина прорвалась, и это началось как маленькая струйка, оставив небольшое мокрое пятно в промежности и немного между ног, но затем, видя, что у меня нет особой надежды, я просто закрыл глаза и со вздохом отпустил и начал полностью пропитывать мои джинсы, вода быстро растеклась по моим бёдрам и ягодицам, а затем потекла по моим ногам к коленям, к лодыжкам, и затем, наконец, начала капать в мои чёрные ботинки, окрашивая мои носки в светло-жёлтый цвет, и начала образовывать лужу диаметром около 3 футов. Он отступил назад, чтобы избежать моей лужи. На моих штанах осталось совсем немного сухих пятен, когда я кончил, и это было потрясающе, но затем начал нарастать страх, даже если меня спасут, я буду мокрым и униженным, но что ещё хуже, если меня не спасут, я боялся, что он причинит мне боль сильнее, чем уже сделал.
+РћРЅ СЃРєР°Р·Р°Р», С‡С‚Рѕ РїРµСЂРµРґСѓРјР°Р», Р° Р·Р°С‚РµРј СЃР»РѕРјР°Р» РјРЅРµ СЂСѓРєСѓ, СЌС‚Рѕ Р±С‹Р»Рѕ РЅРµРІРµСЂРѕСЏС‚РЅРѕ РјСѓС‡РёС‚РµР»СЊРЅРѕ, Рё РєРѕРіРґР° СЌС‚Рѕ РїСЂРѕРёР·РѕС€Р»Рѕ, РјРѕСЏ РїР»РѕС‚РёРЅР° РїСЂРѕСЂРІР°Р»Р°СЃСЊ, Рё СЌС‚Рѕ РЅР°С‡Р°Р»РѕСЃСЊ РєР°Рє РјР°Р»РµРЅСЊРєР°СЏ СЃС‚СЂСѓР№РєР°, РѕСЃС‚Р°РІРёРІ РЅРµР±РѕР»СЊС€РѕРµ РјРѕРєСЂРѕРµ РїСЏС‚РЅРѕ РІ РїСЂРѕРјРµР¶РЅРѕСЃС‚Рё Рё РЅРµРјРЅРѕРіРѕ РјРµР¶РґСѓ РЅРѕРі, РЅРѕ Р·Р°С‚РµРј, РІРёРґСЏ, С‡С‚Рѕ Сѓ РјРµРЅСЏ РЅРµС‚ РѕСЃРѕР±РѕР№ РЅР°РґРµР¶РґС‹, СЏ РїСЂРѕСЃС‚Рѕ Р·Р°РєСЂС‹Р» РіР»Р°Р·Р° Рё СЃРѕ РІР·РґРѕС…РѕРј РѕС‚РїСѓСЃС‚РёР» Рё РЅР°С‡Р°Р» РїРѕР»РЅРѕСЃС‚СЊСЋ РїСЂРѕРїРёС‚С‹РІР°С‚СЊ РјРѕРё РґР¶РёРЅСЃС‹, РІРѕРґР° Р±С‹СЃС‚СЂРѕ СЂР°СЃС‚РµРєР»Р°СЃСЊ РїРѕ РјРѕРёРј Р±С‘РґСЂР°Рј Рё СЏРіРѕРґРёС†Р°Рј, Р° Р·Р°С‚РµРј РїРѕС‚РµРєР»Р° РїРѕ РјРѕРёРј РЅРѕРіР°Рј Рє РєРѕР»РµРЅСЏРј, Рє Р»РѕРґС‹Р¶РєР°Рј, Рё Р·Р°С‚РµРј, РЅР°РєРѕРЅРµС†, РЅР°С‡Р°Р»Р° РєР°РїР°С‚СЊ РІ РјРѕРё С‡С‘СЂРЅС‹Рµ Р±РѕС‚РёРЅРєРё, РѕРєСЂР°С€РёРІР°СЏ РјРѕРё РЅРѕСЃРєРё РІ СЃРІРµС‚Р»Рѕ-Р¶С‘Р»С‚С‹Р№ С†РІРµС‚, Рё РЅР°С‡Р°Р»Р° РѕР±СЂР°Р·РѕРІС‹РІР°С‚СЊ Р»СѓР¶Сѓ РґРёР°РјРµС‚СЂРѕРј РѕРєРѕР»Рѕ 3 С„СѓС‚РѕРІ. РћРЅ РѕС‚СЃС‚СѓРїРёР» РЅР°Р·Р°Рґ, С‡С‚РѕР±С‹ РёР·Р±РµР¶Р°С‚СЊ РјРѕРµР№ Р»СѓР¶Рё. РќР° РјРѕРёС… С€С‚Р°РЅР°С… РѕСЃС‚Р°Р»РѕСЃСЊ СЃРѕРІСЃРµРј РЅРµРјРЅРѕРіРѕ СЃСѓС…РёС… РїСЏС‚РµРЅ, РєРѕРіРґР° СЏ РєРѕРЅС‡РёР», Рё СЌС‚Рѕ Р±С‹Р»Рѕ РїРѕС‚СЂСЏСЃР°СЋС‰Рµ, РЅРѕ Р·Р°С‚РµРј РЅР°С‡Р°Р» РЅР°СЂР°СЃС‚Р°С‚СЊ СЃС‚СЂР°С…, РґР°Р¶Рµ РµСЃР»Рё РјРµРЅСЏ СЃРїР°СЃСѓС‚, СЏ Р±СѓРґСѓ РјРѕРєСЂС‹Рј Рё СѓРЅРёР¶РµРЅРЅС‹Рј, РЅРѕ С‡С‚Рѕ РµС‰С‘ С…СѓР¶Рµ, РµСЃР»Рё РјРµРЅСЏ РЅРµ СЃРїР°СЃСѓС‚, СЏ Р±РѕСЏР»СЃСЏ, С‡С‚Рѕ РѕРЅ РїСЂРёС‡РёРЅРёС‚ РјРЅРµ Р±РѕР»СЊ СЃРёР»СЊРЅРµРµ, С‡РµРј СѓР¶Рµ СЃРґРµР»Р°Р».
 
-Но когда я открыл глаза и оторвался от своего беспорядка, я увидел, что он был в шоке и ошеломлён, поэтому я ударил его по нардам и побежал. Мне удалось сбежать, и по пути я услышал, как разбилось стекло на крыше. Позже я узнал, что это была команда «Стрела», и они задержали его, и как только я отошёл на достаточное расстояние, я позвонил в 911, и они отвезли меня в больницу, где мне наложили гипс на руку, и решили, что я должен остаться на ночь.
+РќРѕ РєРѕРіРґР° СЏ РѕС‚РєСЂС‹Р» РіР»Р°Р·Р° Рё РѕС‚РѕСЂРІР°Р»СЃСЏ РѕС‚ СЃРІРѕРµРіРѕ Р±РµСЃРїРѕСЂСЏРґРєР°, СЏ СѓРІРёРґРµР», С‡С‚Рѕ РѕРЅ Р±С‹Р» РІ С€РѕРєРµ Рё РѕС€РµР»РѕРјР»С‘РЅ, РїРѕСЌС‚РѕРјСѓ СЏ СѓРґР°СЂРёР» РµРіРѕ РїРѕ РЅР°СЂРґР°Рј Рё РїРѕР±РµР¶Р°Р». РњРЅРµ СѓРґР°Р»РѕСЃСЊ СЃР±РµР¶Р°С‚СЊ, Рё РїРѕ РїСѓС‚Рё СЏ СѓСЃР»С‹С€Р°Р», РєР°Рє СЂР°Р·Р±РёР»РѕСЃСЊ СЃС‚РµРєР»Рѕ РЅР° РєСЂС‹С€Рµ. РџРѕР·Р¶Рµ СЏ СѓР·РЅР°Р», С‡С‚Рѕ СЌС‚Рѕ Р±С‹Р»Р° РєРѕРјР°РЅРґР° В«РЎС‚СЂРµР»Р°В», Рё РѕРЅРё Р·Р°РґРµСЂР¶Р°Р»Рё РµРіРѕ, Рё РєР°Рє С‚РѕР»СЊРєРѕ СЏ РѕС‚РѕС€С‘Р» РЅР° РґРѕСЃС‚Р°С‚РѕС‡РЅРѕРµ СЂР°СЃСЃС‚РѕСЏРЅРёРµ, СЏ РїРѕР·РІРѕРЅРёР» РІ 911, Рё РѕРЅРё РѕС‚РІРµР·Р»Рё РјРµРЅСЏ РІ Р±РѕР»СЊРЅРёС†Сѓ, РіРґРµ РјРЅРµ РЅР°Р»РѕР¶РёР»Рё РіРёРїСЃ РЅР° СЂСѓРєСѓ, Рё СЂРµС€РёР»Рё, С‡С‚Рѕ СЏ РґРѕР»Р¶РµРЅ РѕСЃС‚Р°С‚СЊСЃСЏ РЅР° РЅРѕС‡СЊ.
 
-И я смирился с этим фактом, но они были настолько любезны, что дали мне сменную одежду до того, как пришли посетители, и примерно через 10 минут моя мама, Оливер и Тея пришли проверить меня, и все они были рады, что со мной всё в порядке, за исключением руки. Конечно, моя мама осталась на ночь, а затем мы уехали на следующее утро, и поскольку врачи великолепны, никто не узнал о моём несчастном случае той ночью без моего упоминания. Думаю, мне стоит попробовать снова мочиться, потому что, несмотря на обстоятельства, которые кажутся УДИВИТЕЛЬНЫМИ, и я позабочусь о том, чтобы у меня было гораздо больше контроля над тем, как и где это происходит.
+Р СЏ СЃРјРёСЂРёР»СЃСЏ СЃ СЌС‚РёРј С„Р°РєС‚РѕРј, РЅРѕ РѕРЅРё Р±С‹Р»Рё РЅР°СЃС‚РѕР»СЊРєРѕ Р»СЋР±РµР·РЅС‹, С‡С‚Рѕ РґР°Р»Рё РјРЅРµ СЃРјРµРЅРЅСѓСЋ РѕРґРµР¶РґСѓ РґРѕ С‚РѕРіРѕ, РєР°Рє РїСЂРёС€Р»Рё РїРѕСЃРµС‚РёС‚РµР»Рё, Рё РїСЂРёРјРµСЂРЅРѕ С‡РµСЂРµР· 10 РјРёРЅСѓС‚ РјРѕСЏ РјР°РјР°, РћР»РёРІРµСЂ Рё РўРµСЏ РїСЂРёС€Р»Рё РїСЂРѕРІРµСЂРёС‚СЊ РјРµРЅСЏ, Рё РІСЃРµ РѕРЅРё Р±С‹Р»Рё СЂР°РґС‹, С‡С‚Рѕ СЃРѕ РјРЅРѕР№ РІСЃС‘ РІ РїРѕСЂСЏРґРєРµ, Р·Р° РёСЃРєР»СЋС‡РµРЅРёРµРј СЂСѓРєРё. РљРѕРЅРµС‡РЅРѕ, РјРѕСЏ РјР°РјР° РѕСЃС‚Р°Р»Р°СЃСЊ РЅР° РЅРѕС‡СЊ, Р° Р·Р°С‚РµРј РјС‹ СѓРµС…Р°Р»Рё РЅР° СЃР»РµРґСѓСЋС‰РµРµ СѓС‚СЂРѕ, Рё РїРѕСЃРєРѕР»СЊРєСѓ РІСЂР°С‡Рё РІРµР»РёРєРѕР»РµРїРЅС‹, РЅРёРєС‚Рѕ РЅРµ СѓР·РЅР°Р» Рѕ РјРѕС‘Рј РЅРµСЃС‡Р°СЃС‚РЅРѕРј СЃР»СѓС‡Р°Рµ С‚РѕР№ РЅРѕС‡СЊСЋ Р±РµР· РјРѕРµРіРѕ СѓРїРѕРјРёРЅР°РЅРёСЏ. Р”СѓРјР°СЋ, РјРЅРµ СЃС‚РѕРёС‚ РїРѕРїСЂРѕР±РѕРІР°С‚СЊ СЃРЅРѕРІР° РјРѕС‡РёС‚СЊСЃСЏ, РїРѕС‚РѕРјСѓ С‡С‚Рѕ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° РѕР±СЃС‚РѕСЏС‚РµР»СЊСЃС‚РІР°, РєРѕС‚РѕСЂС‹Рµ РєР°Р¶СѓС‚СЃСЏ РЈР”РР’РРўР•Р›Р¬РќР«РњР, Рё СЏ РїРѕР·Р°Р±РѕС‡СѓСЃСЊ Рѕ С‚РѕРј, С‡С‚РѕР±С‹ Сѓ РјРµРЅСЏ Р±С‹Р»Рѕ РіРѕСЂР°Р·РґРѕ Р±РѕР»СЊС€Рµ РєРѕРЅС‚СЂРѕР»СЏ РЅР°Рґ С‚РµРј, РєР°Рє Рё РіРґРµ СЌС‚Рѕ РїСЂРѕРёСЃС…РѕРґРёС‚.
 
-КОНЕЦ
+РљРћРќР•Р¦
 
