--- a/Nik591/101122-legacies-omorashi/rus.textile
+++ b/Nik591/101122-legacies-omorashi/rus.textile
@@ -1,166 +1,166 @@
-Legacies Omorashi — Omorashi fiction — Omorashi
+Legacies Omorashi вЂ” Omorashi fiction вЂ” Omorashi
 
-Автор: Nik591
+РђРІС‚РѕСЂ: Nik591
 
 *000*2024-05-18 23:36
 
-Это основано на Legacies Omorashi
+Р­С‚Рѕ РѕСЃРЅРѕРІР°РЅРѕ РЅР° Legacies Omorashi
 
-Он был создан octavia
+РћРЅ Р±С‹Р» СЃРѕР·РґР°РЅ octavia
 
-И я просто переписал текст с мокрой концовкой. (Все персонажи в возрасте до 20 лет, а Джози — до 18). (Это AU, которая вряд ли будет следовать канону)
+Р СЏ РїСЂРѕСЃС‚Рѕ РїРµСЂРµРїРёСЃР°Р» С‚РµРєСЃС‚ СЃ РјРѕРєСЂРѕР№ РєРѕРЅС†РѕРІРєРѕР№. (Р’СЃРµ РїРµСЂСЃРѕРЅР°Р¶Рё РІ РІРѕР·СЂР°СЃС‚Рµ РґРѕ 20 Р»РµС‚, Р° Р”Р¶РѕР·Рё вЂ” РґРѕ 18). (Р­С‚Рѕ AU, РєРѕС‚РѕСЂР°СЏ РІСЂСЏРґ Р»Рё Р±СѓРґРµС‚ СЃР»РµРґРѕРІР°С‚СЊ РєР°РЅРѕРЅСѓ)
 
-Персонажи, которые включены: в основном Джози и Хоуп, но есть небольшие камео в начале от Пенелопы и Лиззи.
+РџРµСЂСЃРѕРЅР°Р¶Рё, РєРѕС‚РѕСЂС‹Рµ РІРєР»СЋС‡РµРЅС‹: РІ РѕСЃРЅРѕРІРЅРѕРј Р”Р¶РѕР·Рё Рё РҐРѕСѓРї, РЅРѕ РµСЃС‚СЊ РЅРµР±РѕР»СЊС€РёРµ РєР°РјРµРѕ РІ РЅР°С‡Р°Р»Рµ РѕС‚ РџРµРЅРµР»РѕРїС‹ Рё Р›РёР·Р·Рё.
 
-Надеюсь, вам понравится!
+РќР°РґРµСЋСЃСЊ, РІР°Рј РїРѕРЅСЂР°РІРёС‚СЃСЏ!
 
-Часть 1:
+Р§Р°СЃС‚СЊ 1:
 
-Джози думала. Она не знала, как относиться к тому, что ей открыла Пенелопа, её девушка. Она увлекалась омораши. Джози считала, что иметь фетиш совершенно нормально, но она задавалась вопросом, стоит ли ей попробовать или нет. Пенелопа не заставляла её, но она не знала, понравится ли ей это. Через некоторое время она решила, что стоит попробовать. Она не хотела разочаровывать Пенелопу, поэтому хотела попробовать сдержать мочу в одиночестве, чтобы узнать, как долго она сможет продержаться и каковы её пределы. Единственной проблемой была Лиззи. Она ненавидела Пенелопу и была бы так зла, если бы узнала, что делает её сестра, просто чтобы угодить ей. Джози пришлось ждать, пока Лиззи уедет.
+Р”Р¶РѕР·Рё РґСѓРјР°Р»Р°. РћРЅР° РЅРµ Р·РЅР°Р»Р°, РєР°Рє РѕС‚РЅРѕСЃРёС‚СЊСЃСЏ Рє С‚РѕРјСѓ, С‡С‚Рѕ РµР№ РѕС‚РєСЂС‹Р»Р° РџРµРЅРµР»РѕРїР°, РµС‘ РґРµРІСѓС€РєР°. РћРЅР° СѓРІР»РµРєР°Р»Р°СЃСЊ РѕРјРѕСЂР°С€Рё. Р”Р¶РѕР·Рё СЃС‡РёС‚Р°Р»Р°, С‡С‚Рѕ РёРјРµС‚СЊ С„РµС‚РёС€ СЃРѕРІРµСЂС€РµРЅРЅРѕ РЅРѕСЂРјР°Р»СЊРЅРѕ, РЅРѕ РѕРЅР° Р·Р°РґР°РІР°Р»Р°СЃСЊ РІРѕРїСЂРѕСЃРѕРј, СЃС‚РѕРёС‚ Р»Рё РµР№ РїРѕРїСЂРѕР±РѕРІР°С‚СЊ РёР»Рё РЅРµС‚. РџРµРЅРµР»РѕРїР° РЅРµ Р·Р°СЃС‚Р°РІР»СЏР»Р° РµС‘, РЅРѕ РѕРЅР° РЅРµ Р·РЅР°Р»Р°, РїРѕРЅСЂР°РІРёС‚СЃСЏ Р»Рё РµР№ СЌС‚Рѕ. Р§РµСЂРµР· РЅРµРєРѕС‚РѕСЂРѕРµ РІСЂРµРјСЏ РѕРЅР° СЂРµС€РёР»Р°, С‡С‚Рѕ СЃС‚РѕРёС‚ РїРѕРїСЂРѕР±РѕРІР°С‚СЊ. РћРЅР° РЅРµ С…РѕС‚РµР»Р° СЂР°Р·РѕС‡Р°СЂРѕРІС‹РІР°С‚СЊ РџРµРЅРµР»РѕРїСѓ, РїРѕСЌС‚РѕРјСѓ С…РѕС‚РµР»Р° РїРѕРїСЂРѕР±РѕРІР°С‚СЊ СЃРґРµСЂР¶Р°С‚СЊ РјРѕС‡Сѓ РІ РѕРґРёРЅРѕС‡РµСЃС‚РІРµ, С‡С‚РѕР±С‹ СѓР·РЅР°С‚СЊ, РєР°Рє РґРѕР»РіРѕ РѕРЅР° СЃРјРѕР¶РµС‚ РїСЂРѕРґРµСЂР¶Р°С‚СЊСЃСЏ Рё РєР°РєРѕРІС‹ РµС‘ РїСЂРµРґРµР»С‹. Р•РґРёРЅСЃС‚РІРµРЅРЅРѕР№ РїСЂРѕР±Р»РµРјРѕР№ Р±С‹Р»Р° Р›РёР·Р·Рё. РћРЅР° РЅРµРЅР°РІРёРґРµР»Р° РџРµРЅРµР»РѕРїСѓ Рё Р±С‹Р»Р° Р±С‹ С‚Р°Рє Р·Р»Р°, РµСЃР»Рё Р±С‹ СѓР·РЅР°Р»Р°, С‡С‚Рѕ РґРµР»Р°РµС‚ РµС‘ СЃРµСЃС‚СЂР°, РїСЂРѕСЃС‚Рѕ С‡С‚РѕР±С‹ СѓРіРѕРґРёС‚СЊ РµР№. Р”Р¶РѕР·Рё РїСЂРёС€Р»РѕСЃСЊ Р¶РґР°С‚СЊ, РїРѕРєР° Р›РёР·Р·Рё СѓРµРґРµС‚.
 
-Идеальный момент настал примерно через 2 дня. Лиззи собиралась уехать из города на день, чтобы посетить нового терапевта с отцом. У Джози было много времени. Она проснулась и решила, что лучше сходить в туалет утром, чтобы Лиззи не заподозрила ничего, потому что она ёрзала. Она вошла в в*нную, соединённую с их спальней и спальней Лиззи, зная, что она делает свой последний мочеиспускательный путь за несколько часов. После этого она оделась. Она решила надеть светло-голубые джинсы и красную футболку с вырезом.
+РРґРµР°Р»СЊРЅС‹Р№ РјРѕРјРµРЅС‚ РЅР°СЃС‚Р°Р» РїСЂРёРјРµСЂРЅРѕ С‡РµСЂРµР· 2 РґРЅСЏ. Р›РёР·Р·Рё СЃРѕР±РёСЂР°Р»Р°СЃСЊ СѓРµС…Р°С‚СЊ РёР· РіРѕСЂРѕРґР° РЅР° РґРµРЅСЊ, С‡С‚РѕР±С‹ РїРѕСЃРµС‚РёС‚СЊ РЅРѕРІРѕРіРѕ С‚РµСЂР°РїРµРІС‚Р° СЃ РѕС‚С†РѕРј. РЈ Р”Р¶РѕР·Рё Р±С‹Р»Рѕ РјРЅРѕРіРѕ РІСЂРµРјРµРЅРё. РћРЅР° РїСЂРѕСЃРЅСѓР»Р°СЃСЊ Рё СЂРµС€РёР»Р°, С‡С‚Рѕ Р»СѓС‡С€Рµ СЃС…РѕРґРёС‚СЊ РІ С‚СѓР°Р»РµС‚ СѓС‚СЂРѕРј, С‡С‚РѕР±С‹ Р›РёР·Р·Рё РЅРµ Р·Р°РїРѕРґРѕР·СЂРёР»Р° РЅРёС‡РµРіРѕ, РїРѕС‚РѕРјСѓ С‡С‚Рѕ РѕРЅР° С‘СЂР·Р°Р»Р°. РћРЅР° РІРѕС€Р»Р° РІ РІ*РЅРЅСѓСЋ, СЃРѕРµРґРёРЅС‘РЅРЅСѓСЋ СЃ РёС… СЃРїР°Р»СЊРЅРµР№ Рё СЃРїР°Р»СЊРЅРµР№ Р›РёР·Р·Рё, Р·РЅР°СЏ, С‡С‚Рѕ РѕРЅР° РґРµР»Р°РµС‚ СЃРІРѕР№ РїРѕСЃР»РµРґРЅРёР№ РјРѕС‡РµРёСЃРїСѓСЃРєР°С‚РµР»СЊРЅС‹Р№ РїСѓС‚СЊ Р·Р° РЅРµСЃРєРѕР»СЊРєРѕ С‡Р°СЃРѕРІ. РџРѕСЃР»Рµ СЌС‚РѕРіРѕ РѕРЅР° РѕРґРµР»Р°СЃСЊ. РћРЅР° СЂРµС€РёР»Р° РЅР°РґРµС‚СЊ СЃРІРµС‚Р»Рѕ-РіРѕР»СѓР±С‹Рµ РґР¶РёРЅСЃС‹ Рё РєСЂР°СЃРЅСѓСЋ С„СѓС‚Р±РѕР»РєСѓ СЃ РІС‹СЂРµР·РѕРј.
 
-«Ух ты, Джо, ты сегодня мило выглядишь! Это для Сатаны?»
+В«РЈС… С‚С‹, Р”Р¶Рѕ, С‚С‹ СЃРµРіРѕРґРЅСЏ РјРёР»Рѕ РІС‹РіР»СЏРґРёС€СЊ! Р­С‚Рѕ РґР»СЏ РЎР°С‚Р°РЅС‹?В»
 
-«Нет, Лиззи, я останусь в своей комнате и позанимаюсь сегодня».
+В«РќРµС‚, Р›РёР·Р·Рё, СЏ РѕСЃС‚Р°РЅСѓСЃСЊ РІ СЃРІРѕРµР№ РєРѕРјРЅР°С‚Рµ Рё РїРѕР·Р°РЅРёРјР°СЋСЃСЊ СЃРµРіРѕРґРЅСЏВ».
 
-«Если ты так говоришь… Мне нужно идти, увидимся вечером, сестрёнка!»
+В«Р•СЃР»Рё С‚С‹ С‚Р°Рє РіРѕРІРѕСЂРёС€СЊвЂ¦ РњРЅРµ РЅСѓР¶РЅРѕ РёРґС‚Рё, СѓРІРёРґРёРјСЃСЏ РІРµС‡РµСЂРѕРј, СЃРµСЃС‚СЂС‘РЅРєР°!В»
 
-И вот так она ушла. Джози пошла на кухню и позавтракала блинами и огромным стаканом воды. Когда она уходила, она столкнулась с Пенелопой.
+Р РІРѕС‚ С‚Р°Рє РѕРЅР° СѓС€Р»Р°. Р”Р¶РѕР·Рё РїРѕС€Р»Р° РЅР° РєСѓС…РЅСЋ Рё РїРѕР·Р°РІС‚СЂР°РєР°Р»Р° Р±Р»РёРЅР°РјРё Рё РѕРіСЂРѕРјРЅС‹Рј СЃС‚Р°РєР°РЅРѕРј РІРѕРґС‹. РљРѕРіРґР° РѕРЅР° СѓС…РѕРґРёР»Р°, РѕРЅР° СЃС‚РѕР»РєРЅСѓР»Р°СЃСЊ СЃ РџРµРЅРµР»РѕРїРѕР№.
 
-«Привет, ДжоДжо».
+В«РџСЂРёРІРµС‚, Р”Р¶РѕР”Р¶РѕВ».
 
-«Привет. Как дела сегодня утром?»
+В«РџСЂРёРІРµС‚. РљР°Рє РґРµР»Р° СЃРµРіРѕРґРЅСЏ СѓС‚СЂРѕРј?В»
 
-«Устал, хочешь потусоваться позже, чтобы не заснуть?»
+В«РЈСЃС‚Р°Р», С…РѕС‡РµС€СЊ РїРѕС‚СѓСЃРѕРІР°С‚СЊСЃСЏ РїРѕР·Р¶Рµ, С‡С‚РѕР±С‹ РЅРµ Р·Р°СЃРЅСѓС‚СЊ?В»
 
-«Извини, не могу. Мне правда нужно учиться, но, может, завтра, ладно?»
+В«РР·РІРёРЅРё, РЅРµ РјРѕРіСѓ. РњРЅРµ РїСЂР°РІРґР° РЅСѓР¶РЅРѕ СѓС‡РёС‚СЊСЃСЏ, РЅРѕ, РјРѕР¶РµС‚, Р·Р°РІС‚СЂР°, Р»Р°РґРЅРѕ?В»
 
-«Привет, можешь кое-что сделать для меня?»
+В«РџСЂРёРІРµС‚, РјРѕР¶РµС€СЊ РєРѕРµ-С‡С‚Рѕ СЃРґРµР»Р°С‚СЊ РґР»СЏ РјРµРЅСЏ?В»
 
-«Что?»
+В«Р§С‚Рѕ?В»
 
-«Ты можешь заставить Хоуп Майклсон обмочиться?»
+В«РўС‹ РјРѕР¶РµС€СЊ Р·Р°СЃС‚Р°РІРёС‚СЊ РҐРѕСѓРї РњР°Р№РєР»СЃРѕРЅ РѕР±РјРѕС‡РёС‚СЊСЃСЏ?В»
 
-«Эм… конечно, но как мне это сделать?»
+В«Р­РјвЂ¦ РєРѕРЅРµС‡РЅРѕ, РЅРѕ РєР°Рє РјРЅРµ СЌС‚Рѕ СЃРґРµР»Р°С‚СЊ?В»
 
-«Я уже попросил кого-то подсыпать ей в напиток немного слабительных, когда она выходила, и я слышал, что она собиралась взять книги из твоей комнаты».
+В«РЇ СѓР¶Рµ РїРѕРїСЂРѕСЃРёР» РєРѕРіРѕ-С‚Рѕ РїРѕРґСЃС‹РїР°С‚СЊ РµР№ РІ РЅР°РїРёС‚РѕРє РЅРµРјРЅРѕРіРѕ СЃР»Р°Р±РёС‚РµР»СЊРЅС‹С…, РєРѕРіРґР° РѕРЅР° РІС‹С…РѕРґРёР»Р°, Рё СЏ СЃР»С‹С€Р°Р», С‡С‚Рѕ РѕРЅР° СЃРѕР±РёСЂР°Р»Р°СЃСЊ РІР·СЏС‚СЊ РєРЅРёРіРё РёР· С‚РІРѕРµР№ РєРѕРјРЅР°С‚С‹В».
 
-«Хорошо, конечно, звучит неплохо».
+В«РҐРѕСЂРѕС€Рѕ, РєРѕРЅРµС‡РЅРѕ, Р·РІСѓС‡РёС‚ РЅРµРїР»РѕС…РѕВ».
 
-«А ещё, ээ, можешь записать? Просто для личного удовольствия и всего такого».
+В«Рђ РµС‰С‘, СЌСЌ, РјРѕР¶РµС€СЊ Р·Р°РїРёСЃР°С‚СЊ? РџСЂРѕСЃС‚Рѕ РґР»СЏ Р»РёС‡РЅРѕРіРѕ СѓРґРѕРІРѕР»СЊСЃС‚РІРёСЏ Рё РІСЃРµРіРѕ С‚Р°РєРѕРіРѕВ».
 
-«Да, конечно, я поставлю камеры».
+В«Р”Р°, РєРѕРЅРµС‡РЅРѕ, СЏ РїРѕСЃС‚Р°РІР»СЋ РєР°РјРµСЂС‹В».
 
-«Хорошо, мне пока нужно пойти учиться. Увидимся завтра!»
+В«РҐРѕСЂРѕС€Рѕ, РјРЅРµ РїРѕРєР° РЅСѓР¶РЅРѕ РїРѕР№С‚Рё СѓС‡РёС‚СЊСЃСЏ. РЈРІРёРґРёРјСЃСЏ Р·Р°РІС‚СЂР°!В»
 
-«Хорошо, увидимся, ДжоДжо».
+В«РҐРѕСЂРѕС€Рѕ, СѓРІРёРґРёРјСЃСЏ, Р”Р¶РѕР”Р¶РѕВ».
 
-Пенелопа поцеловала её и вошла на кухню. Джози не могла не заметить, что её девушка этим утром много ёрзала, и в глубине души она знала, что ей, вероятно, нужно в туалет, что дало ей мотивацию для выполнения своего проекта. Чтобы Хоуп попала в аварию и записала это. Интересно, как это совпадёт с моим планом? Может, я смогу присоединиться к ней в мокроте, чтобы устроить Пенелопе классный сюрприз?
+РџРµРЅРµР»РѕРїР° РїРѕС†РµР»РѕРІР°Р»Р° РµС‘ Рё РІРѕС€Р»Р° РЅР° РєСѓС…РЅСЋ. Р”Р¶РѕР·Рё РЅРµ РјРѕРіР»Р° РЅРµ Р·Р°РјРµС‚РёС‚СЊ, С‡С‚Рѕ РµС‘ РґРµРІСѓС€РєР° СЌС‚РёРј СѓС‚СЂРѕРј РјРЅРѕРіРѕ С‘СЂР·Р°Р»Р°, Рё РІ РіР»СѓР±РёРЅРµ РґСѓС€Рё РѕРЅР° Р·РЅР°Р»Р°, С‡С‚Рѕ РµР№, РІРµСЂРѕСЏС‚РЅРѕ, РЅСѓР¶РЅРѕ РІ С‚СѓР°Р»РµС‚, С‡С‚Рѕ РґР°Р»Рѕ РµР№ РјРѕС‚РёРІР°С†РёСЋ РґР»СЏ РІС‹РїРѕР»РЅРµРЅРёСЏ СЃРІРѕРµРіРѕ РїСЂРѕРµРєС‚Р°. Р§С‚РѕР±С‹ РҐРѕСѓРї РїРѕРїР°Р»Р° РІ Р°РІР°СЂРёСЋ Рё Р·Р°РїРёСЃР°Р»Р° СЌС‚Рѕ. РРЅС‚РµСЂРµСЃРЅРѕ, РєР°Рє СЌС‚Рѕ СЃРѕРІРїР°РґС‘С‚ СЃ РјРѕРёРј РїР»Р°РЅРѕРј? РњРѕР¶РµС‚, СЏ СЃРјРѕРіСѓ РїСЂРёСЃРѕРµРґРёРЅРёС‚СЊСЃСЏ Рє РЅРµР№ РІ РјРѕРєСЂРѕС‚Рµ, С‡С‚РѕР±С‹ СѓСЃС‚СЂРѕРёС‚СЊ РџРµРЅРµР»РѕРїРµ РєР»Р°СЃСЃРЅС‹Р№ СЃСЋСЂРїСЂРёР·?
 
-Она вернулась в свою комнату, установила несколько камер и открыла бутылку воды. Она выпила её, пока смотрела V-Wars на своём ноутбуке. Она колебалась, но в конечном итоге решила не пить ещё одну сразу и не смущать Хоуп таким образом. Это будет только для Пенелопы, чтобы не распространилось, но всё же. Хотя она действительно хотела порадовать свою девушку, ей пришлось вернуться на кухню на обед, и она не хотела, чтобы кто-то узнал о том, что она делает. После двух эпизодов она почувствовала резь в мочевом пузыре. Ей нужно было в туалет, но это было совсем не срочно. Час спустя она делала сэндвич и несла его в свою комнату с другими бутылками воды. Её потребность увеличилась, но всё ещё была терпимой. Она вернулась к своему телешоу и постаралась не думать о мочеиспускании.
+РћРЅР° РІРµСЂРЅСѓР»Р°СЃСЊ РІ СЃРІРѕСЋ РєРѕРјРЅР°С‚Сѓ, СѓСЃС‚Р°РЅРѕРІРёР»Р° РЅРµСЃРєРѕР»СЊРєРѕ РєР°РјРµСЂ Рё РѕС‚РєСЂС‹Р»Р° Р±СѓС‚С‹Р»РєСѓ РІРѕРґС‹. РћРЅР° РІС‹РїРёР»Р° РµС‘, РїРѕРєР° СЃРјРѕС‚СЂРµР»Р° V-Wars РЅР° СЃРІРѕС‘Рј РЅРѕСѓС‚Р±СѓРєРµ. РћРЅР° РєРѕР»РµР±Р°Р»Р°СЃСЊ, РЅРѕ РІ РєРѕРЅРµС‡РЅРѕРј РёС‚РѕРіРµ СЂРµС€РёР»Р° РЅРµ РїРёС‚СЊ РµС‰С‘ РѕРґРЅСѓ СЃСЂР°Р·Сѓ Рё РЅРµ СЃРјСѓС‰Р°С‚СЊ РҐРѕСѓРї С‚Р°РєРёРј РѕР±СЂР°Р·РѕРј. Р­С‚Рѕ Р±СѓРґРµС‚ С‚РѕР»СЊРєРѕ РґР»СЏ РџРµРЅРµР»РѕРїС‹, С‡С‚РѕР±С‹ РЅРµ СЂР°СЃРїСЂРѕСЃС‚СЂР°РЅРёР»РѕСЃСЊ, РЅРѕ РІСЃС‘ Р¶Рµ. РҐРѕС‚СЏ РѕРЅР° РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ С…РѕС‚РµР»Р° РїРѕСЂР°РґРѕРІР°С‚СЊ СЃРІРѕСЋ РґРµРІСѓС€РєСѓ, РµР№ РїСЂРёС€Р»РѕСЃСЊ РІРµСЂРЅСѓС‚СЊСЃСЏ РЅР° РєСѓС…РЅСЋ РЅР° РѕР±РµРґ, Рё РѕРЅР° РЅРµ С…РѕС‚РµР»Р°, С‡С‚РѕР±С‹ РєС‚Рѕ-С‚Рѕ СѓР·РЅР°Р» Рѕ С‚РѕРј, С‡С‚Рѕ РѕРЅР° РґРµР»Р°РµС‚. РџРѕСЃР»Рµ РґРІСѓС… СЌРїРёР·РѕРґРѕРІ РѕРЅР° РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р° СЂРµР·СЊ РІ РјРѕС‡РµРІРѕРј РїСѓР·С‹СЂРµ. Р•Р№ РЅСѓР¶РЅРѕ Р±С‹Р»Рѕ РІ С‚СѓР°Р»РµС‚, РЅРѕ СЌС‚Рѕ Р±С‹Р»Рѕ СЃРѕРІСЃРµРј РЅРµ СЃСЂРѕС‡РЅРѕ. Р§Р°СЃ СЃРїСѓСЃС‚СЏ РѕРЅР° РґРµР»Р°Р»Р° СЃСЌРЅРґРІРёС‡ Рё РЅРµСЃР»Р° РµРіРѕ РІ СЃРІРѕСЋ РєРѕРјРЅР°С‚Сѓ СЃ РґСЂСѓРіРёРјРё Р±СѓС‚С‹Р»РєР°РјРё РІРѕРґС‹. Р•С‘ РїРѕС‚СЂРµР±РЅРѕСЃС‚СЊ СѓРІРµР»РёС‡РёР»Р°СЃСЊ, РЅРѕ РІСЃС‘ РµС‰С‘ Р±С‹Р»Р° С‚РµСЂРїРёРјРѕР№. РћРЅР° РІРµСЂРЅСѓР»Р°СЃСЊ Рє СЃРІРѕРµРјСѓ С‚РµР»РµС€РѕСѓ Рё РїРѕСЃС‚Р°СЂР°Р»Р°СЃСЊ РЅРµ РґСѓРјР°С‚СЊ Рѕ РјРѕС‡РµРёСЃРїСѓСЃРєР°РЅРёРё.
 
-У неё была идея, как заставить Хоуп обмочиться. Она подумала, что запереть ванную на таймер и запереть вход коротким заклинанием было бы неплохо, но что делать с окнами? Ах да, давайте наложим на них защитные чары, чтобы их нельзя было выломать. Она наложила запирающие чары на дверь ванной на 5 часов и наложила защитные чары на неё и на окна на всякий случай.
+РЈ РЅРµС‘ Р±С‹Р»Р° РёРґРµСЏ, РєР°Рє Р·Р°СЃС‚Р°РІРёС‚СЊ РҐРѕСѓРї РѕР±РјРѕС‡РёС‚СЊСЃСЏ. РћРЅР° РїРѕРґСѓРјР°Р»Р°, С‡С‚Рѕ Р·Р°РїРµСЂРµС‚СЊ РІР°РЅРЅСѓСЋ РЅР° С‚Р°Р№РјРµСЂ Рё Р·Р°РїРµСЂРµС‚СЊ РІС…РѕРґ РєРѕСЂРѕС‚РєРёРј Р·Р°РєР»РёРЅР°РЅРёРµРј Р±С‹Р»Рѕ Р±С‹ РЅРµРїР»РѕС…Рѕ, РЅРѕ С‡С‚Рѕ РґРµР»Р°С‚СЊ СЃ РѕРєРЅР°РјРё? РђС… РґР°, РґР°РІР°Р№С‚Рµ РЅР°Р»РѕР¶РёРј РЅР° РЅРёС… Р·Р°С‰РёС‚РЅС‹Рµ С‡Р°СЂС‹, С‡С‚РѕР±С‹ РёС… РЅРµР»СЊР·СЏ Р±С‹Р»Рѕ РІС‹Р»РѕРјР°С‚СЊ. РћРЅР° РЅР°Р»РѕР¶РёР»Р° Р·Р°РїРёСЂР°СЋС‰РёРµ С‡Р°СЂС‹ РЅР° РґРІРµСЂСЊ РІР°РЅРЅРѕР№ РЅР° 5 С‡Р°СЃРѕРІ Рё РЅР°Р»РѕР¶РёР»Р° Р·Р°С‰РёС‚РЅС‹Рµ С‡Р°СЂС‹ РЅР° РЅРµС‘ Рё РЅР° РѕРєРЅР° РЅР° РІСЃСЏРєРёР№ СЃР»СѓС‡Р°Р№.
 
-Спустя 3 часа и 4 бутылки воды, это было всё, о чём она могла думать. Она приближалась к своему пределу, и она определённо не могла больше игнорировать свою потребность. Она постоянно скрещивала и распрямляла ноги и чувствовала сильное искушение начать держать себя в руках, а её мочевой пузырь был действительно полным. Она была рада остаться одна. Она открыла книгу и попыталась прочитать её, чтобы изменить своё решение, но это было почти невозможно. Она почти потеряла контроль, когда раздался стук в дверь её спальни. «Она здесь!»
+РЎРїСѓСЃС‚СЏ 3 С‡Р°СЃР° Рё 4 Р±СѓС‚С‹Р»РєРё РІРѕРґС‹, СЌС‚Рѕ Р±С‹Р»Рѕ РІСЃС‘, Рѕ С‡С‘Рј РѕРЅР° РјРѕРіР»Р° РґСѓРјР°С‚СЊ. РћРЅР° РїСЂРёР±Р»РёР¶Р°Р»Р°СЃСЊ Рє СЃРІРѕРµРјСѓ РїСЂРµРґРµР»Сѓ, Рё РѕРЅР° РѕРїСЂРµРґРµР»С‘РЅРЅРѕ РЅРµ РјРѕРіР»Р° Р±РѕР»СЊС€Рµ РёРіРЅРѕСЂРёСЂРѕРІР°С‚СЊ СЃРІРѕСЋ РїРѕС‚СЂРµР±РЅРѕСЃС‚СЊ. РћРЅР° РїРѕСЃС‚РѕСЏРЅРЅРѕ СЃРєСЂРµС‰РёРІР°Р»Р° Рё СЂР°СЃРїСЂСЏРјР»СЏР»Р° РЅРѕРіРё Рё С‡СѓРІСЃС‚РІРѕРІР°Р»Р° СЃРёР»СЊРЅРѕРµ РёСЃРєСѓС€РµРЅРёРµ РЅР°С‡Р°С‚СЊ РґРµСЂР¶Р°С‚СЊ СЃРµР±СЏ РІ СЂСѓРєР°С…, Р° РµС‘ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ Р±С‹Р» РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РїРѕР»РЅС‹Рј. РћРЅР° Р±С‹Р»Р° СЂР°РґР° РѕСЃС‚Р°С‚СЊСЃСЏ РѕРґРЅР°. РћРЅР° РѕС‚РєСЂС‹Р»Р° РєРЅРёРіСѓ Рё РїРѕРїС‹С‚Р°Р»Р°СЃСЊ РїСЂРѕС‡РёС‚Р°С‚СЊ РµС‘, С‡С‚РѕР±С‹ РёР·РјРµРЅРёС‚СЊ СЃРІРѕС‘ СЂРµС€РµРЅРёРµ, РЅРѕ СЌС‚Рѕ Р±С‹Р»Рѕ РїРѕС‡С‚Рё РЅРµРІРѕР·РјРѕР¶РЅРѕ. РћРЅР° РїРѕС‡С‚Рё РїРѕС‚РµСЂСЏР»Р° РєРѕРЅС‚СЂРѕР»СЊ, РєРѕРіРґР° СЂР°Р·РґР°Р»СЃСЏ СЃС‚СѓРє РІ РґРІРµСЂСЊ РµС‘ СЃРїР°Р»СЊРЅРё. В«РћРЅР° Р·РґРµСЃСЊ!В»
 
-«Джози? Это Хоуп. Лиззи сказала, что я могу зайти, чтобы одолжить некоторые из её книг для теста в понедельник. Ты можешь открыть дверь?»
+В«Р”Р¶РѕР·Рё? Р­С‚Рѕ РҐРѕСѓРї. Р›РёР·Р·Рё СЃРєР°Р·Р°Р»Р°, С‡С‚Рѕ СЏ РјРѕРіСѓ Р·Р°Р№С‚Рё, С‡С‚РѕР±С‹ РѕРґРѕР»Р¶РёС‚СЊ РЅРµРєРѕС‚РѕСЂС‹Рµ РёР· РµС‘ РєРЅРёРі РґР»СЏ С‚РµСЃС‚Р° РІ РїРѕРЅРµРґРµР»СЊРЅРёРє. РўС‹ РјРѕР¶РµС€СЊ РѕС‚РєСЂС‹С‚СЊ РґРІРµСЂСЊ?В»
 
-«Да, конечно. Просто подожди минутку».
+В«Р”Р°, РєРѕРЅРµС‡РЅРѕ. РџСЂРѕСЃС‚Рѕ РїРѕРґРѕР¶РґРё РјРёРЅСѓС‚РєСѓВ».
 
-Джози встала впервые за несколько часов и засунула руки между ног. Чёрт, всё было хуже, чем она думала. Она медленно убрала руки из паха, прежде чем открыть дверь, и в комнату ворвалась Хоуп в синих джинсах, теннисных туфлях, серой джинсовой куртке и сером топе. Она быстро огляделась, и Джози могла поклясться, что увидела, как Хоуп подмигнула в сторону одной из камер.
+Р”Р¶РѕР·Рё РІСЃС‚Р°Р»Р° РІРїРµСЂРІС‹Рµ Р·Р° РЅРµСЃРєРѕР»СЊРєРѕ С‡Р°СЃРѕРІ Рё Р·Р°СЃСѓРЅСѓР»Р° СЂСѓРєРё РјРµР¶РґСѓ РЅРѕРі. Р§С‘СЂС‚, РІСЃС‘ Р±С‹Р»Рѕ С…СѓР¶Рµ, С‡РµРј РѕРЅР° РґСѓРјР°Р»Р°. РћРЅР° РјРµРґР»РµРЅРЅРѕ СѓР±СЂР°Р»Р° СЂСѓРєРё РёР· РїР°С…Р°, РїСЂРµР¶РґРµ С‡РµРј РѕС‚РєСЂС‹С‚СЊ РґРІРµСЂСЊ, Рё РІ РєРѕРјРЅР°С‚Сѓ РІРѕСЂРІР°Р»Р°СЃСЊ РҐРѕСѓРї РІ СЃРёРЅРёС… РґР¶РёРЅСЃР°С…, С‚РµРЅРЅРёСЃРЅС‹С… С‚СѓС„Р»СЏС…, СЃРµСЂРѕР№ РґР¶РёРЅСЃРѕРІРѕР№ РєСѓСЂС‚РєРµ Рё СЃРµСЂРѕРј С‚РѕРїРµ. РћРЅР° Р±С‹СЃС‚СЂРѕ РѕРіР»СЏРґРµР»Р°СЃСЊ, Рё Р”Р¶РѕР·Рё РјРѕРіР»Р° РїРѕРєР»СЏСЃС‚СЊСЃСЏ, С‡С‚Рѕ СѓРІРёРґРµР»Р°, РєР°Рє РҐРѕСѓРї РїРѕРґРјРёРіРЅСѓР»Р° РІ СЃС‚РѕСЂРѕРЅСѓ РѕРґРЅРѕР№ РёР· РєР°РјРµСЂ.
 
-«Это странно», — подумала она.
+В«Р­С‚Рѕ СЃС‚СЂР°РЅРЅРѕВ», вЂ” РїРѕРґСѓРјР°Р»Р° РѕРЅР°.
 
-*шепчет, чтобы Хоуп не услышала «doorius lockius».
+*С€РµРїС‡РµС‚, С‡С‚РѕР±С‹ РҐРѕСѓРї РЅРµ СѓСЃР»С‹С€Р°Р»Р° В«doorius lockiusВ».
 
-«Привет, это займёт всего минуту».
+В«РџСЂРёРІРµС‚, СЌС‚Рѕ Р·Р°Р№РјС‘С‚ РІСЃРµРіРѕ РјРёРЅСѓС‚СѓВ».
 
-‘Ладно, надо тянуть’
+вЂР›Р°РґРЅРѕ, РЅР°РґРѕ С‚СЏРЅСѓС‚СЊвЂ™
 
-“Эй, как дела?”
+вЂњР­Р№, РєР°Рє РґРµР»Р°?вЂќ
 
-“Ох.. хех, у меня всё в-всё хорошо, просто немного нервничаю из-за теста.”
+вЂњРћС….. С…РµС…, Сѓ РјРµРЅСЏ РІСЃС‘ РІ-РІСЃС‘ С…РѕСЂРѕС€Рѕ, РїСЂРѕСЃС‚Рѕ РЅРµРјРЅРѕРіРѕ РЅРµСЂРІРЅРёС‡Р°СЋ РёР·-Р·Р° С‚РµСЃС‚Р°.вЂќ
 
-“А, да, у меня всё в-всё хорошо, как у тебя дела с учёбой?”
+вЂњРђ, РґР°, Сѓ РјРµРЅСЏ РІСЃС‘ РІ-РІСЃС‘ С…РѕСЂРѕС€Рѕ, РєР°Рє Сѓ С‚РµР±СЏ РґРµР»Р° СЃ СѓС‡С‘Р±РѕР№?вЂќ
 
-“Д-всё хорошо, я-я довольно уверена, что сдам, просто хотела немного повторить.”
+вЂњР”-РІСЃС‘ С…РѕСЂРѕС€Рѕ, СЏ-СЏ РґРѕРІРѕР»СЊРЅРѕ СѓРІРµСЂРµРЅР°, С‡С‚Рѕ СЃРґР°Рј, РїСЂРѕСЃС‚Рѕ С…РѕС‚РµР»Р° РЅРµРјРЅРѕРіРѕ РїРѕРІС‚РѕСЂРёС‚СЊ.вЂќ
 
-Рыжая начала листать книги, и Джози заметила, что она переминается с ноги на ногу и скрещивает ноги. Ей нужно в туалет? О, конечно, нужно! Сама Джози держала бёдра прижатыми друг к другу. Она дрожала, но пыталась выглядеть непринуждённо. Внезапно Хоуп вскочила на ноги, засунула руку в промежность и посмотрела на неё. ‘Она что, протекла?’
+Р С‹Р¶Р°СЏ РЅР°С‡Р°Р»Р° Р»РёСЃС‚Р°С‚СЊ РєРЅРёРіРё, Рё Р”Р¶РѕР·Рё Р·Р°РјРµС‚РёР»Р°, С‡С‚Рѕ РѕРЅР° РїРµСЂРµРјРёРЅР°РµС‚СЃСЏ СЃ РЅРѕРіРё РЅР° РЅРѕРіСѓ Рё СЃРєСЂРµС‰РёРІР°РµС‚ РЅРѕРіРё. Р•Р№ РЅСѓР¶РЅРѕ РІ С‚СѓР°Р»РµС‚? Рћ, РєРѕРЅРµС‡РЅРѕ, РЅСѓР¶РЅРѕ! РЎР°РјР° Р”Р¶РѕР·Рё РґРµСЂР¶Р°Р»Р° Р±С‘РґСЂР° РїСЂРёР¶Р°С‚С‹РјРё РґСЂСѓРі Рє РґСЂСѓРіСѓ. РћРЅР° РґСЂРѕР¶Р°Р»Р°, РЅРѕ РїС‹С‚Р°Р»Р°СЃСЊ РІС‹РіР»СЏРґРµС‚СЊ РЅРµРїСЂРёРЅСѓР¶РґС‘РЅРЅРѕ. Р’РЅРµР·Р°РїРЅРѕ РҐРѕСѓРї РІСЃРєРѕС‡РёР»Р° РЅР° РЅРѕРіРё, Р·Р°СЃСѓРЅСѓР»Р° СЂСѓРєСѓ РІ РїСЂРѕРјРµР¶РЅРѕСЃС‚СЊ Рё РїРѕСЃРјРѕС‚СЂРµР»Р° РЅР° РЅРµС‘. вЂРћРЅР° С‡С‚Рѕ, РїСЂРѕС‚РµРєР»Р°?вЂ™
 
-“Можно мне воспользоваться твоей ванной? Я была в Mystic Grill с Лэндоном, выпила 3 молочных коктейля и бутылку воды, но не сходила в туалет перед тем, как уйти или прийти сюда. Я думала, что всё будет в порядке, но клянусь, я сейчас лопну!
+вЂњРњРѕР¶РЅРѕ РјРЅРµ РІРѕСЃРїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ С‚РІРѕРµР№ РІР°РЅРЅРѕР№? РЇ Р±С‹Р»Р° РІ Mystic Grill СЃ Р›СЌРЅРґРѕРЅРѕРј, РІС‹РїРёР»Р° 3 РјРѕР»РѕС‡РЅС‹С… РєРѕРєС‚РµР№Р»СЏ Рё Р±СѓС‚С‹Р»РєСѓ РІРѕРґС‹, РЅРѕ РЅРµ СЃС…РѕРґРёР»Р° РІ С‚СѓР°Р»РµС‚ РїРµСЂРµРґ С‚РµРј, РєР°Рє СѓР№С‚Рё РёР»Рё РїСЂРёР№С‚Рё СЃСЋРґР°. РЇ РґСѓРјР°Р»Р°, С‡С‚Рѕ РІСЃС‘ Р±СѓРґРµС‚ РІ РїРѕСЂСЏРґРєРµ, РЅРѕ РєР»СЏРЅСѓСЃСЊ, СЏ СЃРµР№С‡Р°СЃ Р»РѕРїРЅСѓ!
 
-«Да... конечно...»
+В«Р”Р°... РєРѕРЅРµС‡РЅРѕ...В»
 
-«Она и не подозревает, что дверь заперта, и мы застряли в этой комнате вместе».
+В«РћРЅР° Рё РЅРµ РїРѕРґРѕР·СЂРµРІР°РµС‚, С‡С‚Рѕ РґРІРµСЂСЊ Р·Р°РїРµСЂС‚Р°, Рё РјС‹ Р·Р°СЃС‚СЂСЏР»Рё РІ СЌС‚РѕР№ РєРѕРјРЅР°С‚Рµ РІРјРµСЃС‚РµВ».
 
-«Спасибо!»
+В«РЎРїР°СЃРёР±Рѕ!В»
 
-Хоуп подбежала к двери в ванную и дёрнула ручку.
+РҐРѕСѓРї РїРѕРґР±РµР¶Р°Р»Р° Рє РґРІРµСЂРё РІ РІР°РЅРЅСѓСЋ Рё РґС‘СЂРЅСѓР»Р° СЂСѓС‡РєСѓ.
 
-«Эээ, Джози? Почему твоя ванная заперта?»
+В«Р­СЌСЌ, Р”Р¶РѕР·Рё? РџРѕС‡РµРјСѓ С‚РІРѕСЏ РІР°РЅРЅР°СЏ Р·Р°РїРµСЂС‚Р°?В»
 
-Джози подошла и тоже попыталась открыть дверь.
+Р”Р¶РѕР·Рё РїРѕРґРѕС€Р»Р° Рё С‚РѕР¶Рµ РїРѕРїС‹С‚Р°Р»Р°СЃСЊ РѕС‚РєСЂС‹С‚СЊ РґРІРµСЂСЊ.
 
-«Какого чёрта?»
+В«РљР°РєРѕРіРѕ С‡С‘СЂС‚Р°?В»
 
-«О боже, я сейчас лопну, у меня 95/100!!»
+В«Рћ Р±РѕР¶Рµ, СЏ СЃРµР№С‡Р°СЃ Р»РѕРїРЅСѓ, Сѓ РјРµРЅСЏ 95/100!!В»
 
-«Да, я знаю, что я тоже почти на пределе, у меня 94/100!»
+В«Р”Р°, СЏ Р·РЅР°СЋ, С‡С‚Рѕ СЏ С‚РѕР¶Рµ РїРѕС‡С‚Рё РЅР° РїСЂРµРґРµР»Рµ, Сѓ РјРµРЅСЏ 94/100!В»
 
 ###
 
-*30 минут спустя
+*30 РјРёРЅСѓС‚ СЃРїСѓСЃС‚СЏ
 
-Они сидели в тишине, надеясь на какое-то спасение, когда Хоуп наконец заговорила.
+РћРЅРё СЃРёРґРµР»Рё РІ С‚РёС€РёРЅРµ, РЅР°РґРµСЏСЃСЊ РЅР° РєР°РєРѕРµ-С‚Рѕ СЃРїР°СЃРµРЅРёРµ, РєРѕРіРґР° РҐРѕСѓРї РЅР°РєРѕРЅРµС† Р·Р°РіРѕРІРѕСЂРёР»Р°.
 
-«Фу, мы застряли здесь на 30 минут! Я сейчас намочу штаны! Я попробую добраться до другой ванной».
+В«Р¤Сѓ, РјС‹ Р·Р°СЃС‚СЂСЏР»Рё Р·РґРµСЃСЊ РЅР° 30 РјРёРЅСѓС‚! РЇ СЃРµР№С‡Р°СЃ РЅР°РјРѕС‡Сѓ С€С‚Р°РЅС‹! РЇ РїРѕРїСЂРѕР±СѓСЋ РґРѕР±СЂР°С‚СЊСЃСЏ РґРѕ РґСЂСѓРіРѕР№ РІР°РЅРЅРѕР№В».
 
-Хоуп пытается открыть дверь спальни, но тоже терпит неудачу, и Джози замечает, что на штанах Хоуп появилось мокрое пятно размером с дикое яблоко. Джози сама решила взглянуть на свои и увидела, что у неё мокрое пятно размером с обычное яблоко, которое вот-вот вырастет.
+РҐРѕСѓРї РїС‹С‚Р°РµС‚СЃСЏ РѕС‚РєСЂС‹С‚СЊ РґРІРµСЂСЊ СЃРїР°Р»СЊРЅРё, РЅРѕ С‚РѕР¶Рµ С‚РµСЂРїРёС‚ РЅРµСѓРґР°С‡Сѓ, Рё Р”Р¶РѕР·Рё Р·Р°РјРµС‡Р°РµС‚, С‡С‚Рѕ РЅР° С€С‚Р°РЅР°С… РҐРѕСѓРї РїРѕСЏРІРёР»РѕСЃСЊ РјРѕРєСЂРѕРµ РїСЏС‚РЅРѕ СЂР°Р·РјРµСЂРѕРј СЃ РґРёРєРѕРµ СЏР±Р»РѕРєРѕ. Р”Р¶РѕР·Рё СЃР°РјР° СЂРµС€РёР»Р° РІР·РіР»СЏРЅСѓС‚СЊ РЅР° СЃРІРѕРё Рё СѓРІРёРґРµР»Р°, С‡С‚Рѕ Сѓ РЅРµС‘ РјРѕРєСЂРѕРµ РїСЏС‚РЅРѕ СЂР°Р·РјРµСЂРѕРј СЃ РѕР±С‹С‡РЅРѕРµ СЏР±Р»РѕРєРѕ, РєРѕС‚РѕСЂРѕРµ РІРѕС‚-РІРѕС‚ РІС‹СЂР°СЃС‚РµС‚.
 
-«О боже, Хоуп, я сейчас намочу себя, у меня есть около 3 минут!»
+В«Рћ Р±РѕР¶Рµ, РҐРѕСѓРї, СЏ СЃРµР№С‡Р°СЃ РЅР°РјРѕС‡Сѓ СЃРµР±СЏ, Сѓ РјРµРЅСЏ РµСЃС‚СЊ РѕРєРѕР»Рѕ 3 РјРёРЅСѓС‚!В»
 
-«Да, Джози, я тебя понимаю! Мне, наверное, максимум 2 минуты, чтобы полностью вымокнуть!»
+В«Р”Р°, Р”Р¶РѕР·Рё, СЏ С‚РµР±СЏ РїРѕРЅРёРјР°СЋ! РњРЅРµ, РЅР°РІРµСЂРЅРѕРµ, РјР°РєСЃРёРјСѓРј 2 РјРёРЅСѓС‚С‹, С‡С‚РѕР±С‹ РїРѕР»РЅРѕСЃС‚СЊСЋ РІС‹РјРѕРєРЅСѓС‚СЊ!В»
 
-«Чёрт! Мы точно не выйдем! Ты просто хочешь помочиться вместе?»
+В«Р§С‘СЂС‚! РњС‹ С‚РѕС‡РЅРѕ РЅРµ РІС‹Р№РґРµРј! РўС‹ РїСЂРѕСЃС‚Рѕ С…РѕС‡РµС€СЊ РїРѕРјРѕС‡РёС‚СЊСЃСЏ РІРјРµСЃС‚Рµ?В»
 
-«Да, конечно, просто что угодно, чтобы уже получить облегчение!»
+В«Р”Р°, РєРѕРЅРµС‡РЅРѕ, РїСЂРѕСЃС‚Рѕ С‡С‚Рѕ СѓРіРѕРґРЅРѕ, С‡С‚РѕР±С‹ СѓР¶Рµ РїРѕР»СѓС‡РёС‚СЊ РѕР±Р»РµРіС‡РµРЅРёРµ!В»
 
-«Боже, она, должно быть, ДЕЙСТВИТЕЛЬНО в отчаянии, если так быстро соглашается. Надеюсь, это каким-то образом не просочится».
+В«Р‘РѕР¶Рµ, РѕРЅР°, РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ, Р”Р•Р™РЎРўР’РРўР•Р›Р¬РќРћ РІ РѕС‚С‡Р°СЏРЅРёРё, РµСЃР»Рё С‚Р°Рє Р±С‹СЃС‚СЂРѕ СЃРѕРіР»Р°С€Р°РµС‚СЃСЏ. РќР°РґРµСЋСЃСЊ, СЌС‚Рѕ РєР°РєРёРј-С‚Рѕ РѕР±СЂР°Р·РѕРј РЅРµ РїСЂРѕСЃРѕС‡РёС‚СЃСЏВ».
 
-«Хорошо, ты готова?»
+В«РҐРѕСЂРѕС€Рѕ, С‚С‹ РіРѕС‚РѕРІР°?В»
 
-«Да».
+В«Р”Р°В».
 
-«Хорошо, я буду считать от 5».
+В«РҐРѕСЂРѕС€Рѕ, СЏ Р±СѓРґСѓ СЃС‡РёС‚Р°С‚СЊ РѕС‚ 5В».
 
-«5…»
+В«5вЂ¦В»
 
-Начала расслабляться.
+РќР°С‡Р°Р»Р° СЂР°СЃСЃР»Р°Р±Р»СЏС‚СЊСЃСЏ.
 
-«4…»
+В«4вЂ¦В»
 
-Хоуп снимает обувь.
+РҐРѕСѓРї СЃРЅРёРјР°РµС‚ РѕР±СѓРІСЊ.
 
-«3…»
+В«3вЂ¦В»
 
-«2…»
+В«2вЂ¦В»
 
-Они поставили ноги вместе.
+РћРЅРё РїРѕСЃС‚Р°РІРёР»Рё РЅРѕРіРё РІРјРµСЃС‚Рµ.
 
-«1…»
+В«1вЂ¦В»
 
-«0…»
+В«0вЂ¦В»
 
-Они закрыли глаза и посмотрели вниз.
+РћРЅРё Р·Р°РєСЂС‹Р»Рё РіР»Р°Р·Р° Рё РїРѕСЃРјРѕС‚СЂРµР»Рё РІРЅРёР·.
 
-«Выпускай».
+В«Р’С‹РїСѓСЃРєР°Р№В».
 
-И они вздохнули, когда начали выпускать свои потоки.
+Р РѕРЅРё РІР·РґРѕС…РЅСѓР»Рё, РєРѕРіРґР° РЅР°С‡Р°Р»Рё РІС‹РїСѓСЃРєР°С‚СЊ СЃРІРѕРё РїРѕС‚РѕРєРё.
 
-Выпуск Хоуп был быстрым и спонтанным, когда она начала мочиться в джинсы. Она распространилась от её мокрого пятна размером с дикое яблоко, распространилась по верху её джинсов и прямо под задними карманами, а затем начала медленно спускаться по её ногам, впитываясь в бёдра маленькими ручейками, к коленям и, наконец, к лодыжкам и начала образовывать лужу на полу. Пока она продолжала писить, лужа продолжала расти, и маленькие ручейки вскоре превратились в одно очень большое пятно, покрывающее почти все её штаны мокротой. Она всё время задыхалась от облегчения, и когда она закончила, она всё ещё задыхалась.
+Р’С‹РїСѓСЃРє РҐРѕСѓРї Р±С‹Р» Р±С‹СЃС‚СЂС‹Рј Рё СЃРїРѕРЅС‚Р°РЅРЅС‹Рј, РєРѕРіРґР° РѕРЅР° РЅР°С‡Р°Р»Р° РјРѕС‡РёС‚СЊСЃСЏ РІ РґР¶РёРЅСЃС‹. РћРЅР° СЂР°СЃРїСЂРѕСЃС‚СЂР°РЅРёР»Р°СЃСЊ РѕС‚ РµС‘ РјРѕРєСЂРѕРіРѕ РїСЏС‚РЅР° СЂР°Р·РјРµСЂРѕРј СЃ РґРёРєРѕРµ СЏР±Р»РѕРєРѕ, СЂР°СЃРїСЂРѕСЃС‚СЂР°РЅРёР»Р°СЃСЊ РїРѕ РІРµСЂС…Сѓ РµС‘ РґР¶РёРЅСЃРѕРІ Рё РїСЂСЏРјРѕ РїРѕРґ Р·Р°РґРЅРёРјРё РєР°СЂРјР°РЅР°РјРё, Р° Р·Р°С‚РµРј РЅР°С‡Р°Р»Р° РјРµРґР»РµРЅРЅРѕ СЃРїСѓСЃРєР°С‚СЊСЃСЏ РїРѕ РµС‘ РЅРѕРіР°Рј, РІРїРёС‚С‹РІР°СЏСЃСЊ РІ Р±С‘РґСЂР° РјР°Р»РµРЅСЊРєРёРјРё СЂСѓС‡РµР№РєР°РјРё, Рє РєРѕР»РµРЅСЏРј Рё, РЅР°РєРѕРЅРµС†, Рє Р»РѕРґС‹Р¶РєР°Рј Рё РЅР°С‡Р°Р»Р° РѕР±СЂР°Р·РѕРІС‹РІР°С‚СЊ Р»СѓР¶Сѓ РЅР° РїРѕР»Сѓ. РџРѕРєР° РѕРЅР° РїСЂРѕРґРѕР»Р¶Р°Р»Р° РїРёСЃРёС‚СЊ, Р»СѓР¶Р° РїСЂРѕРґРѕР»Р¶Р°Р»Р° СЂР°СЃС‚Рё, Рё РјР°Р»РµРЅСЊРєРёРµ СЂСѓС‡РµР№РєРё РІСЃРєРѕСЂРµ РїСЂРµРІСЂР°С‚РёР»РёСЃСЊ РІ РѕРґРЅРѕ РѕС‡РµРЅСЊ Р±РѕР»СЊС€РѕРµ РїСЏС‚РЅРѕ, РїРѕРєСЂС‹РІР°СЋС‰РµРµ РїРѕС‡С‚Рё РІСЃРµ РµС‘ С€С‚Р°РЅС‹ РјРѕРєСЂРѕС‚РѕР№. РћРЅР° РІСЃС‘ РІСЂРµРјСЏ Р·Р°РґС‹С…Р°Р»Р°СЃСЊ РѕС‚ РѕР±Р»РµРіС‡РµРЅРёСЏ, Рё РєРѕРіРґР° РѕРЅР° Р·Р°РєРѕРЅС‡РёР»Р°, РѕРЅР° РІСЃС‘ РµС‰С‘ Р·Р°РґС‹С…Р°Р»Р°СЃСЊ.
 
-Освобождение Джози было немного более застенчивым и напряжённым. Всё началось с небольших струек, которые немного намочили её промежность и бёдра, затем, когда она начала не в состоянии была сдерживать это, тоненькая струйка начала смачивать её джинсы, и когда облегчение взяло верх, вся её застенчивость ушла, когда она начала полностью высвобождаться с громким стоном/визгом от того, как это было восхитительно, и тоненькая струйка превратилась в ревущий стремительный поток, который быстро намочил её бёдра и карманы джинсов и начал спускаться по её ногам потоками солидарности, вниз к её коленям, её икрам и, наконец, к её лодыжкам, полностью пропитывая её обувь, прежде чем они быстро переполнились и пролились на пол, образовав большую лужу на земле. Её джинсы были полностью мокрыми, и почти ни одна из их поверхностей не была даже немного сухой. Она всё время тихо стонала от совершенно нового ощущения, которое было восхитительным. Она так запыхалась, что, когда она закончила, она задыхалась.
+РћСЃРІРѕР±РѕР¶РґРµРЅРёРµ Р”Р¶РѕР·Рё Р±С‹Р»Рѕ РЅРµРјРЅРѕРіРѕ Р±РѕР»РµРµ Р·Р°СЃС‚РµРЅС‡РёРІС‹Рј Рё РЅР°РїСЂСЏР¶С‘РЅРЅС‹Рј. Р’СЃС‘ РЅР°С‡Р°Р»РѕСЃСЊ СЃ РЅРµР±РѕР»СЊС€РёС… СЃС‚СЂСѓРµРє, РєРѕС‚РѕСЂС‹Рµ РЅРµРјРЅРѕРіРѕ РЅР°РјРѕС‡РёР»Рё РµС‘ РїСЂРѕРјРµР¶РЅРѕСЃС‚СЊ Рё Р±С‘РґСЂР°, Р·Р°С‚РµРј, РєРѕРіРґР° РѕРЅР° РЅР°С‡Р°Р»Р° РЅРµ РІ СЃРѕСЃС‚РѕСЏРЅРёРё Р±С‹Р»Р° СЃРґРµСЂР¶РёРІР°С‚СЊ СЌС‚Рѕ, С‚РѕРЅРµРЅСЊРєР°СЏ СЃС‚СЂСѓР№РєР° РЅР°С‡Р°Р»Р° СЃРјР°С‡РёРІР°С‚СЊ РµС‘ РґР¶РёРЅСЃС‹, Рё РєРѕРіРґР° РѕР±Р»РµРіС‡РµРЅРёРµ РІР·СЏР»Рѕ РІРµСЂС…, РІСЃСЏ РµС‘ Р·Р°СЃС‚РµРЅС‡РёРІРѕСЃС‚СЊ СѓС€Р»Р°, РєРѕРіРґР° РѕРЅР° РЅР°С‡Р°Р»Р° РїРѕР»РЅРѕСЃС‚СЊСЋ РІС‹СЃРІРѕР±РѕР¶РґР°С‚СЊСЃСЏ СЃ РіСЂРѕРјРєРёРј СЃС‚РѕРЅРѕРј/РІРёР·РіРѕРј РѕС‚ С‚РѕРіРѕ, РєР°Рє СЌС‚Рѕ Р±С‹Р»Рѕ РІРѕСЃС…РёС‚РёС‚РµР»СЊРЅРѕ, Рё С‚РѕРЅРµРЅСЊРєР°СЏ СЃС‚СЂСѓР№РєР° РїСЂРµРІСЂР°С‚РёР»Р°СЃСЊ РІ СЂРµРІСѓС‰РёР№ СЃС‚СЂРµРјРёС‚РµР»СЊРЅС‹Р№ РїРѕС‚РѕРє, РєРѕС‚РѕСЂС‹Р№ Р±С‹СЃС‚СЂРѕ РЅР°РјРѕС‡РёР» РµС‘ Р±С‘РґСЂР° Рё РєР°СЂРјР°РЅС‹ РґР¶РёРЅСЃРѕРІ Рё РЅР°С‡Р°Р» СЃРїСѓСЃРєР°С‚СЊСЃСЏ РїРѕ РµС‘ РЅРѕРіР°Рј РїРѕС‚РѕРєР°РјРё СЃРѕР»РёРґР°СЂРЅРѕСЃС‚Рё, РІРЅРёР· Рє РµС‘ РєРѕР»РµРЅСЏРј, РµС‘ РёРєСЂР°Рј Рё, РЅР°РєРѕРЅРµС†, Рє РµС‘ Р»РѕРґС‹Р¶РєР°Рј, РїРѕР»РЅРѕСЃС‚СЊСЋ РїСЂРѕРїРёС‚С‹РІР°СЏ РµС‘ РѕР±СѓРІСЊ, РїСЂРµР¶РґРµ С‡РµРј РѕРЅРё Р±С‹СЃС‚СЂРѕ РїРµСЂРµРїРѕР»РЅРёР»РёСЃСЊ Рё РїСЂРѕР»РёР»РёСЃСЊ РЅР° РїРѕР», РѕР±СЂР°Р·РѕРІР°РІ Р±РѕР»СЊС€СѓСЋ Р»СѓР¶Сѓ РЅР° Р·РµРјР»Рµ. Р•С‘ РґР¶РёРЅСЃС‹ Р±С‹Р»Рё РїРѕР»РЅРѕСЃС‚СЊСЋ РјРѕРєСЂС‹РјРё, Рё РїРѕС‡С‚Рё РЅРё РѕРґРЅР° РёР· РёС… РїРѕРІРµСЂС…РЅРѕСЃС‚РµР№ РЅРµ Р±С‹Р»Р° РґР°Р¶Рµ РЅРµРјРЅРѕРіРѕ СЃСѓС…РѕР№. РћРЅР° РІСЃС‘ РІСЂРµРјСЏ С‚РёС…Рѕ СЃС‚РѕРЅР°Р»Р° РѕС‚ СЃРѕРІРµСЂС€РµРЅРЅРѕ РЅРѕРІРѕРіРѕ РѕС‰СѓС‰РµРЅРёСЏ, РєРѕС‚РѕСЂРѕРµ Р±С‹Р»Рѕ РІРѕСЃС…РёС‚РёС‚РµР»СЊРЅС‹Рј. РћРЅР° С‚Р°Рє Р·Р°РїС‹С…Р°Р»Р°СЃСЊ, С‡С‚Рѕ, РєРѕРіРґР° РѕРЅР° Р·Р°РєРѕРЅС‡РёР»Р°, РѕРЅР° Р·Р°РґС‹С…Р°Р»Р°СЃСЊ.
 
-Я планирую сделать это с точки зрения Хоуп для части 2. Поделитесь своими мыслями по этому поводу.
+РЇ РїР»Р°РЅРёСЂСѓСЋ СЃРґРµР»Р°С‚СЊ СЌС‚Рѕ СЃ С‚РѕС‡РєРё Р·СЂРµРЅРёСЏ РҐРѕСѓРї РґР»СЏ С‡Р°СЃС‚Рё 2. РџРѕРґРµР»РёС‚РµСЃСЊ СЃРІРѕРёРјРё РјС‹СЃР»СЏРјРё РїРѕ СЌС‚РѕРјСѓ РїРѕРІРѕРґСѓ.
 
